# GlazeTerminal

./: .gitignore  ESTRATEGIA.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: config.json  index.css  main.tsx
src-tauri/: Cargo.toml  nano.84342.save  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ipc.rs  main.rs
src-tauri/src/core/: pty_manager.rs
src-tauri/src/middleware/: context_buffer.rs  mod.rs  passthrough.rs
src/components/: DottedBackground.tsx  LiquidBackground.tsx  Terminal.tsx  liquidFragment.ts
src/components/Layout/: AppLayout.tsx  TopBar.tsx
src/components/Settings/: ConfigurationWindow.tsx  ThemeSelector.tsx
src/components/ui/: StyledInputs.tsx  basic-dropdown.tsx  sidebar.tsx
src/constants/: ThemeDefinitions.ts
src/context/: ThemeContext.tsx
src/hooks/: useWindowControls.ts
